--- a/templates/news/edit_article.html
+++ b/templates/news/edit_article.html
@@ -2,6 +2,8 @@
 
 {% block profile %}
 
+<p class="h1">Edit article</p>
+
 {% if error %}
 <p style="color: red;">Bad data, try again.</p>
 <p style="color: red;">{{ error }}</p>
