--- a/templates/news/new_category.html
+++ b/templates/news/new_category.html
@@ -2,7 +2,7 @@
 
 {% block profile %}
 
-<p class="h1 mt-3 mb-3">Create new category</p>
+<p class="h1">Create new category</p>
 
 {% if error %}
 <p style="color: red;">Bad data, try again.</p>
