edit password user view

--- a/templates/accounts/settings.html
+++ b/templates/accounts/settings.html
@@ -3,19 +3,6 @@
 {% block profile %}
 
 <h1>Settings</h1>
-<!--<ul>-->
-<!--    <li>ID: {{ user.id }}</li>-->
-<!--    <li>USERNAME: {{ user.username }}</li>-->
-<!--    <li>PASSWORD {{ user.password }}</li>-->
-<!--    <li>FIRST NAME: {{ user.first_name }}</li>-->
-<!--    <li>LAST NAME: {{ user.last_name }}</li>-->
-<!--    <li>DATE JOINED: {{ user.date_joined }}</li>-->
-<!--</ul>-->
-<br><br><br>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-success">Change</button>
-</form>
+<p>In developing</p>
 
 {% endblock %}
