Fixed wrong display of categories when user sign in or sign up

--- a/templates/news/home.html
+++ b/templates/news/home.html
@@ -19,6 +19,9 @@
 </div>
 
 {% endfor %}
+
+<!--Paginator-->
+
 {% if page_obj.has_other_pages %}
 <nav aria-label="Page navigation example">
     <ul class="pagination bs-dark-rgb justify-content-end m-3">
