--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 <div class="wrapper">
+
     <!-- Responsive navbar-->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">
@@ -88,19 +90,21 @@
                 {% else %}
 
                 <span class="navbar-text">
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <a href="{% url 'signin' %}">
-                            <button type="button" class="btn btn-outline-success ms-2 me-2">Sign In</button>
-                        </a>
-                        <a href="{% url 'signup' %}">
-                            <button type="button" class="btn btn-success ms-2 me-2">Sign Up</button>
-                        </a>
-                    </div>
-                </span>
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <a href="{% url 'signin' %}">
+                                    <button type="button" class="btn btn-outline-success ms-2 me-2">Sign In</button>
+                                </a>
+                                <a href="{% url 'signup' %}">
+                                    <button type="button" class="btn btn-success ms-2 me-2">Sign Up</button>
+                                </a>
+                            </div>
+                        </span>
                 {% endif %}
             </div>
         </div>
     </nav>
+
+    <!-- Navbar categories-->
 
     <nav class="navbar navbar-expand navbar-dark bg-dark p-0">
         <div class="container container-fluid text-center">
@@ -121,16 +125,21 @@
     </nav>
 
     <!-- Page content-->
+
     <div class="content">{% block content %} {% endblock %}</div>
 
     <!-- Footer-->
+
     <footer class="py-5 bg-dark">
         <div class="container"><p class="m-0 text-center text-white">Copyright &copy; News Blog 2022</p></div>
     </footer>
+
     <!-- JavaScript Bundle with Popper -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous">
+    </script>
 </div>
 </body>
 </html>
