added paginator in profile -> my articles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,3 +27,13 @@ footer {
 input {
     border-color: red;
 }
+
+.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover {
+    z-index: 3;
+    color: #23527c;
+    background-color: purple;
+    border-color: #ddd;
+}
