--- a/templates/accounts/edit_password_user.html
+++ b/templates/accounts/edit_password_user.html
@@ -4,7 +4,7 @@
 
 <div class="container rounded bg-white mb-5">
 
-<h1>Settings</h1>
+<h1>{{ page_name }}</h1>
 <br>
 <form class="m-3" method="POST">
     {% csrf_token %}
