--- a/templates/news/home.html
+++ b/templates/news/home.html
@@ -24,7 +24,7 @@
 
 {% if page_obj.has_other_pages %}
 <nav aria-label="Page navigation example">
-    <ul class="pagination bs-dark-rgb justify-content-end m-3">
+    <ul class="pagination pagination-dark justify-content-end m-3">
         {% if page_obj.has_previous %}
         <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
         {% endif %}
