--- a/templates/news/manage_articles.html
+++ b/templates/news/manage_articles.html
@@ -21,6 +21,25 @@
 </div>
 <br>
 {% endfor %}
+{% if page_obj.has_other_pages %}
+<nav aria-label="Page navigation example">
+    <ul class="pagination bs-dark-rgb justify-content-end m-3">
+        {% if page_obj.has_previous %}
+        <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+        {% endif %}
+        {% for page in paginator.page_range %}
+        {% if page_obj.number == page %}
+        <li class="page-item active"><a class="page-link" href="?page={{ page }}">{{ page }}</a></li>
+        {% elif page >= page_obj.number|add:-2 and page <= page_obj.number|add:2 %}
+        <li class="page-item"><a class="page-link" href="?page={{ page }}">{{ page }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% if page_obj.has_next %}
+        <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+        {% endif %}
+    </ul>
+</nav>
+{% endif %}
 {% else %}
 <p>You haven't made any posts yet =(</p>
 {% endif %}
