moved templates into app dirs

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -10,7 +10,6 @@
                      src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
                 <span class="font-weight-bold">{{ user }}</span>
                 <span class="text-black-50">edogaru@mail.com.my</span>
-                <span> </span>
             </div>
         </div>
         <div class="col-md-5 border-right">
@@ -23,7 +22,8 @@
                         <input type="text"
                                class="form-control"
                                placeholder="first name"
-                               value=""></div>
+                               value="">
+                    </div>
                     <div class="col-md-6"><label class="labels">Last name</label>
                         <input type="text" class="form-control"
                                value="" placeholder="surname">
@@ -33,7 +33,8 @@
                     <div class="col-md-12"><label class="labels">Email</label>
                         <input type="text" class="form-control"
                                placeholder="enter email id"
-                               value=""></div>
+                               value="">
+                    </div>
                 </div>
                 <div class="row mt-3">
                     <div class="col-md-6"><label class="labels">Country</label>
@@ -43,7 +44,8 @@
                     <div class="col-md-6"><label class="labels">State/Region</label>
                         <input type="text"
                                class="form-control" value=""
-                               placeholder="state"></div>
+                               placeholder="state">
+                    </div>
                 </div>
                 <div class="mt-5 text-center">
                     <button class="btn btn-primary profile-button" type="button">Save Profile</button>
@@ -62,13 +64,15 @@
                     <input type="text"
                            class="form-control"
                            placeholder="experience"
-                           value=""></div>
+                           value="">
+                </div>
                 <br>
                 <div class="col-md-12"><label class="labels">Additional Details</label>
                     <input type="text"
                            class="form-control"
                            placeholder="additional details"
-                           value=""></div>
+                           value="">
+                </div>
             </div>
         </div>
     </div>
